{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 60,
  "lineage": "9fb2821f-9588-02f3-e335-f6f0111689d8",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:622623004059:loadbalancer/app/app-alb/5cfb16af2b44f126",
            "arn_suffix": "app/app-alb/5cfb16af2b44f126",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-alb-146258734.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:622623004059:loadbalancer/app/app-alb/5cfb16af2b44f126",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0c87db37eb0dc6af6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-048fe0b87057fca26"
              },
              {
                "subnet_id": "subnet-0eabe258009409f24"
              }
            ],
            "subnets": [
              "subnet-048fe0b87057fca26",
              "subnet-0eabe258009409f24"
            ],
            "vpc_id": "vpc-0f6682535067d2e74",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:622623004059:loadbalancer/app/app-alb/5cfb16af2b44f126"
          },
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_subnet.public",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:622623004059:listener/app/app-alb/5cfb16af2b44f126/52cd707ddfb1889c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:622623004059:targetgroup/app-20260514173331911900000006/61063a3c4ed32e7b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:622623004059:listener/app/app-alb/5cfb16af2b44f126/52cd707ddfb1889c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:622623004059:loadbalancer/app/app-alb/5cfb16af2b44f126",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:622623004059:listener/app/app-alb/5cfb16af2b44f126/52cd707ddfb1889c"
          },
          "dependencies": [
            "module.network.aws_lb.app_alb",
            "module.network.aws_lb_target_group.app_tg",
            "module.security.aws_security_group.alb_sg",
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_subnet.public",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:622623004059:targetgroup/app-20260514173331911900000006/61063a3c4ed32e7b",
            "arn_suffix": "targetgroup/app-20260514173331911900000006/61063a3c4ed32e7b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:622623004059:targetgroup/app-20260514173331911900000006/61063a3c4ed32e7b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-20260514173331911900000006",
            "name_prefix": "app-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:622623004059:targetgroup/app-20260514173331911900000006/61063a3c4ed32e7b"
          },
          "dependencies": [
            "module.security.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:security-group/sg-0c87db37eb0dc6af6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c87db37eb0dc6af6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "622623004059",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "sg-0c87db37eb0dc6af6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:security-group/sg-08bf6ca0b00131937",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bf6ca0b00131937",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c87db37eb0dc6af6"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "622623004059",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "sg-08bf6ca0b00131937",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.security.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:security-group/sg-00ff70d7a62ecde75",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00ff70d7a62ecde75",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08bf6ca0b00131937"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "622623004059",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "sg-00ff70d7a62ecde75",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.app_sg",
            "module.security.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:security-group/sg-0ff5830e5278e3268",
            "description": "Security group for VPC Endpoints",
            "egress": [],
            "id": "sg-0ff5830e5278e3268",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08bf6ca0b00131937"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "622623004059",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "sg-0ff5830e5278e3268",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.app_sg",
            "module.security.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_direct",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:vpc-endpoint/vpce-0e15378d39a684c3a",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e15378d39a684c3a",
            "ip_address_type": "ipv4",
            "owner_id": "622623004059",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-002dbdcd017b5ddb8",
              "rtb-092da89906ddb7084",
              "rtb-0a233b891cdba38b1",
              "rtb-0e9dcc8f966c1f57b"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "vpce-0e15378d39a684c3a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.data.aws_availability_zones.available",
            "module.security.data.aws_region.current",
            "module.security.data.aws_route_tables.all_vpc_routes",
            "module.security.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.security.module.vpc.aws_customer_gateway.this",
            "module.security.module.vpc.aws_db_subnet_group.database",
            "module.security.module.vpc.aws_default_network_acl.this",
            "module.security.module.vpc.aws_default_route_table.default",
            "module.security.module.vpc.aws_default_security_group.this",
            "module.security.module.vpc.aws_default_vpc.this",
            "module.security.module.vpc.aws_egress_only_internet_gateway.this",
            "module.security.module.vpc.aws_eip.nat",
            "module.security.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.security.module.vpc.aws_flow_log.this",
            "module.security.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.aws_internet_gateway.this",
            "module.security.module.vpc.aws_nat_gateway.this",
            "module.security.module.vpc.aws_network_acl.database",
            "module.security.module.vpc.aws_network_acl.elasticache",
            "module.security.module.vpc.aws_network_acl.intra",
            "module.security.module.vpc.aws_network_acl.outpost",
            "module.security.module.vpc.aws_network_acl.private",
            "module.security.module.vpc.aws_network_acl.public",
            "module.security.module.vpc.aws_network_acl.redshift",
            "module.security.module.vpc.aws_network_acl_rule.database_inbound",
            "module.security.module.vpc.aws_network_acl_rule.database_outbound",
            "module.security.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.security.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.security.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.security.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.security.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.security.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.security.module.vpc.aws_network_acl_rule.private_inbound",
            "module.security.module.vpc.aws_network_acl_rule.private_outbound",
            "module.security.module.vpc.aws_network_acl_rule.public_inbound",
            "module.security.module.vpc.aws_network_acl_rule.public_outbound",
            "module.security.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.security.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.security.module.vpc.aws_redshift_subnet_group.redshift",
            "module.security.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.security.module.vpc.aws_route.database_internet_gateway",
            "module.security.module.vpc.aws_route.database_ipv6_egress",
            "module.security.module.vpc.aws_route.database_nat_gateway",
            "module.security.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.security.module.vpc.aws_route.private_ipv6_egress",
            "module.security.module.vpc.aws_route.private_nat_gateway",
            "module.security.module.vpc.aws_route.public_internet_gateway",
            "module.security.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.security.module.vpc.aws_route_table.database",
            "module.security.module.vpc.aws_route_table.elasticache",
            "module.security.module.vpc.aws_route_table.intra",
            "module.security.module.vpc.aws_route_table.private",
            "module.security.module.vpc.aws_route_table.public",
            "module.security.module.vpc.aws_route_table.redshift",
            "module.security.module.vpc.aws_route_table_association.database",
            "module.security.module.vpc.aws_route_table_association.elasticache",
            "module.security.module.vpc.aws_route_table_association.intra",
            "module.security.module.vpc.aws_route_table_association.outpost",
            "module.security.module.vpc.aws_route_table_association.private",
            "module.security.module.vpc.aws_route_table_association.public",
            "module.security.module.vpc.aws_route_table_association.redshift",
            "module.security.module.vpc.aws_route_table_association.redshift_public",
            "module.security.module.vpc.aws_subnet.database",
            "module.security.module.vpc.aws_subnet.elasticache",
            "module.security.module.vpc.aws_subnet.intra",
            "module.security.module.vpc.aws_subnet.outpost",
            "module.security.module.vpc.aws_subnet.private",
            "module.security.module.vpc.aws_subnet.public",
            "module.security.module.vpc.aws_subnet.redshift",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.security.module.vpc.aws_vpc_block_public_access_options.this",
            "module.security.module.vpc.aws_vpc_dhcp_options.this",
            "module.security.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security.module.vpc.aws_vpn_gateway.this",
            "module.security.module.vpc.aws_vpn_gateway_attachment.this",
            "module.security.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.security.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.security.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.security.module.vpc.data.aws_caller_identity.current",
            "module.security.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.security.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.data.aws_partition.current",
            "module.security.module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.security.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:network-acl/acl-0091d69b84e335f0d",
            "default_network_acl_id": "acl-0091d69b84e335f0d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0091d69b84e335f0d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "622623004059",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-00aafa9bf7b3c9e65",
              "subnet-022a8b63fb3ac146d",
              "subnet-03d99f96f68a329e8",
              "subnet-048fe0b87057fca26",
              "subnet-0eabe258009409f24",
              "subnet-0f6f15018592ebca7"
            ],
            "tags": {
              "Name": "funfarm-vpc-default"
            },
            "tags_all": {
              "Name": "funfarm-vpc-default"
            },
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:route-table/rtb-002dbdcd017b5ddb8",
            "default_route_table_id": "rtb-002dbdcd017b5ddb8",
            "id": "rtb-002dbdcd017b5ddb8",
            "owner_id": "622623004059",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "funfarm-vpc-default"
            },
            "tags_all": {
              "Name": "funfarm-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:security-group/sg-0fe8d782e24757b77",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0fe8d782e24757b77",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "622623004059",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "funfarm-vpc-default"
            },
            "tags_all": {
              "Name": "funfarm-vpc-default"
            },
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:internet-gateway/igw-02e0a6a7713583333",
            "id": "igw-02e0a6a7713583333",
            "owner_id": "622623004059",
            "region": "us-east-1",
            "tags": {
              "Name": "funfarm-vpc"
            },
            "tags_all": {
              "Name": "funfarm-vpc"
            },
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "igw-02e0a6a7713583333",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02e0a6a7713583333",
            "id": "r-rtb-0a233b891cdba38b11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0a233b891cdba38b1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0a233b891cdba38b1"
          },
          "dependencies": [
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_internet_gateway.this",
            "module.security.module.vpc.aws_route_table.public",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:route-table/rtb-092da89906ddb7084",
            "id": "rtb-092da89906ddb7084",
            "owner_id": "622623004059",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "funfarm-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "funfarm-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "rtb-092da89906ddb7084",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:route-table/rtb-0e9dcc8f966c1f57b",
            "id": "rtb-0e9dcc8f966c1f57b",
            "owner_id": "622623004059",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "funfarm-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "funfarm-vpc-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "rtb-0e9dcc8f966c1f57b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:route-table/rtb-0a233b891cdba38b1",
            "id": "rtb-0a233b891cdba38b1",
            "owner_id": "622623004059",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "funfarm-vpc-public"
            },
            "tags_all": {
              "Name": "funfarm-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "rtb-0a233b891cdba38b1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9d695f32678d468",
            "region": "us-east-1",
            "route_table_id": "rtb-092da89906ddb7084",
            "subnet_id": "subnet-0f6f15018592ebca7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "rtbassoc-0e9d695f32678d468",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_route_table.database",
            "module.security.module.vpc.aws_route_table.private",
            "module.security.module.vpc.aws_subnet.database",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f4308b8b978ffa4",
            "region": "us-east-1",
            "route_table_id": "rtb-0e9dcc8f966c1f57b",
            "subnet_id": "subnet-022a8b63fb3ac146d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "rtbassoc-08f4308b8b978ffa4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_route_table.database",
            "module.security.module.vpc.aws_route_table.private",
            "module.security.module.vpc.aws_subnet.database",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f1d1650bf728088",
            "region": "us-east-1",
            "route_table_id": "rtb-092da89906ddb7084",
            "subnet_id": "subnet-03d99f96f68a329e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "rtbassoc-09f1d1650bf728088",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_route_table.private",
            "module.security.module.vpc.aws_subnet.private",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0049664e1e6a2247a",
            "region": "us-east-1",
            "route_table_id": "rtb-0e9dcc8f966c1f57b",
            "subnet_id": "subnet-00aafa9bf7b3c9e65"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "rtbassoc-0049664e1e6a2247a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_route_table.private",
            "module.security.module.vpc.aws_subnet.private",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0593787f55fe8ba66",
            "region": "us-east-1",
            "route_table_id": "rtb-0a233b891cdba38b1",
            "subnet_id": "subnet-0eabe258009409f24"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "rtbassoc-0593787f55fe8ba66",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_route_table.public",
            "module.security.module.vpc.aws_subnet.public",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a936606d959103d",
            "region": "us-east-1",
            "route_table_id": "rtb-0a233b891cdba38b1",
            "subnet_id": "subnet-048fe0b87057fca26"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "rtbassoc-03a936606d959103d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_route_table.public",
            "module.security.module.vpc.aws_subnet.public",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:subnet/subnet-0f6f15018592ebca7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6f15018592ebca7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "622623004059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "funfarm-vpc-db-us-east-1a"
            },
            "tags_all": {
              "Name": "funfarm-vpc-db-us-east-1a"
            },
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "subnet-0f6f15018592ebca7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:subnet/subnet-022a8b63fb3ac146d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022a8b63fb3ac146d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "622623004059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "funfarm-vpc-db-us-east-1b"
            },
            "tags_all": {
              "Name": "funfarm-vpc-db-us-east-1b"
            },
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "subnet-022a8b63fb3ac146d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:subnet/subnet-03d99f96f68a329e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d99f96f68a329e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "622623004059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "funfarm-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "funfarm-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "subnet-03d99f96f68a329e8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:subnet/subnet-00aafa9bf7b3c9e65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00aafa9bf7b3c9e65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "622623004059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "funfarm-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "funfarm-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "subnet-00aafa9bf7b3c9e65",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:subnet/subnet-0eabe258009409f24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eabe258009409f24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "622623004059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "funfarm-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "funfarm-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "subnet-0eabe258009409f24",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:subnet/subnet-048fe0b87057fca26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048fe0b87057fca26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "622623004059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "funfarm-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "funfarm-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "subnet-048fe0b87057fca26",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:vpc/vpc-0f6682535067d2e74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0091d69b84e335f0d",
            "default_route_table_id": "rtb-002dbdcd017b5ddb8",
            "default_security_group_id": "sg-0fe8d782e24757b77",
            "dhcp_options_id": "dopt-0528cf1cfd539640e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f6682535067d2e74",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-002dbdcd017b5ddb8",
            "owner_id": "622623004059",
            "region": "us-east-1",
            "tags": {
              "Name": "funfarm-vpc"
            },
            "tags_all": {
              "Name": "funfarm-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "vpc-0f6682535067d2e74",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security.module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ecr_api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:vpc-endpoint/vpce-077d0ae4080629828",
            "dns_entry": [
              {
                "dns_name": "vpce-077d0ae4080629828-4i1dar93.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-077d0ae4080629828-4i1dar93-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-077d0ae4080629828-4i1dar93-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04881222G09ROYB1O2PW"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z023494932XCY0SAFPYM0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-077d0ae4080629828",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-099ce92f914da3e2d",
              "eni-0db7e6c8ddeb9b53c"
            ],
            "owner_id": "622623004059",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ff5830e5278e3268"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.209",
                "subnet_id": "subnet-03d99f96f68a329e8"
              },
              {
                "ipv4": "10.0.12.67",
                "subnet_id": "subnet-00aafa9bf7b3c9e65"
              }
            ],
            "subnet_ids": [
              "subnet-00aafa9bf7b3c9e65",
              "subnet-03d99f96f68a329e8"
            ],
            "tags": {
              "Name": "ecr_api"
            },
            "tags_all": {
              "Name": "ecr_api"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "vpce-077d0ae4080629828",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.app_sg",
            "module.security.aws_security_group.vpc_endpoints_sg",
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.security.module.vpc.aws_customer_gateway.this",
            "module.security.module.vpc.aws_db_subnet_group.database",
            "module.security.module.vpc.aws_default_network_acl.this",
            "module.security.module.vpc.aws_default_route_table.default",
            "module.security.module.vpc.aws_default_security_group.this",
            "module.security.module.vpc.aws_default_vpc.this",
            "module.security.module.vpc.aws_egress_only_internet_gateway.this",
            "module.security.module.vpc.aws_eip.nat",
            "module.security.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.security.module.vpc.aws_flow_log.this",
            "module.security.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.aws_internet_gateway.this",
            "module.security.module.vpc.aws_nat_gateway.this",
            "module.security.module.vpc.aws_network_acl.database",
            "module.security.module.vpc.aws_network_acl.elasticache",
            "module.security.module.vpc.aws_network_acl.intra",
            "module.security.module.vpc.aws_network_acl.outpost",
            "module.security.module.vpc.aws_network_acl.private",
            "module.security.module.vpc.aws_network_acl.public",
            "module.security.module.vpc.aws_network_acl.redshift",
            "module.security.module.vpc.aws_network_acl_rule.database_inbound",
            "module.security.module.vpc.aws_network_acl_rule.database_outbound",
            "module.security.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.security.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.security.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.security.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.security.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.security.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.security.module.vpc.aws_network_acl_rule.private_inbound",
            "module.security.module.vpc.aws_network_acl_rule.private_outbound",
            "module.security.module.vpc.aws_network_acl_rule.public_inbound",
            "module.security.module.vpc.aws_network_acl_rule.public_outbound",
            "module.security.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.security.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.security.module.vpc.aws_redshift_subnet_group.redshift",
            "module.security.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.security.module.vpc.aws_route.database_internet_gateway",
            "module.security.module.vpc.aws_route.database_ipv6_egress",
            "module.security.module.vpc.aws_route.database_nat_gateway",
            "module.security.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.security.module.vpc.aws_route.private_ipv6_egress",
            "module.security.module.vpc.aws_route.private_nat_gateway",
            "module.security.module.vpc.aws_route.public_internet_gateway",
            "module.security.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.security.module.vpc.aws_route_table.database",
            "module.security.module.vpc.aws_route_table.elasticache",
            "module.security.module.vpc.aws_route_table.intra",
            "module.security.module.vpc.aws_route_table.private",
            "module.security.module.vpc.aws_route_table.public",
            "module.security.module.vpc.aws_route_table.redshift",
            "module.security.module.vpc.aws_route_table_association.database",
            "module.security.module.vpc.aws_route_table_association.elasticache",
            "module.security.module.vpc.aws_route_table_association.intra",
            "module.security.module.vpc.aws_route_table_association.outpost",
            "module.security.module.vpc.aws_route_table_association.private",
            "module.security.module.vpc.aws_route_table_association.public",
            "module.security.module.vpc.aws_route_table_association.redshift",
            "module.security.module.vpc.aws_route_table_association.redshift_public",
            "module.security.module.vpc.aws_subnet.database",
            "module.security.module.vpc.aws_subnet.elasticache",
            "module.security.module.vpc.aws_subnet.intra",
            "module.security.module.vpc.aws_subnet.outpost",
            "module.security.module.vpc.aws_subnet.private",
            "module.security.module.vpc.aws_subnet.public",
            "module.security.module.vpc.aws_subnet.redshift",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.security.module.vpc.aws_vpc_block_public_access_options.this",
            "module.security.module.vpc.aws_vpc_dhcp_options.this",
            "module.security.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security.module.vpc.aws_vpn_gateway.this",
            "module.security.module.vpc.aws_vpn_gateway_attachment.this",
            "module.security.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.security.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.security.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.security.module.vpc.data.aws_caller_identity.current",
            "module.security.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.security.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.data.aws_partition.current",
            "module.security.module.vpc.data.aws_region.current",
            "module.security.module.vpc_endpoints.aws_security_group.this",
            "module.security.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ecr_dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:vpc-endpoint/vpce-0b1cdf01366769b37",
            "dns_entry": [
              {
                "dns_name": "vpce-0b1cdf01366769b37-odilh4kt.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b1cdf01366769b37-odilh4kt-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b1cdf01366769b37-odilh4kt-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03398432IQN5TPCX27YB"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03398432IQN5TPCX27YB"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z03159603L742QIRWTYVR"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z03159603L742QIRWTYVR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b1cdf01366769b37",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0910e00ede7dee8d9",
              "eni-0f56fbc371676ade4"
            ],
            "owner_id": "622623004059",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ff5830e5278e3268"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.247",
                "subnet_id": "subnet-03d99f96f68a329e8"
              },
              {
                "ipv4": "10.0.12.80",
                "subnet_id": "subnet-00aafa9bf7b3c9e65"
              }
            ],
            "subnet_ids": [
              "subnet-00aafa9bf7b3c9e65",
              "subnet-03d99f96f68a329e8"
            ],
            "tags": {
              "Name": "ecr_dkr"
            },
            "tags_all": {
              "Name": "ecr_dkr"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "vpce-0b1cdf01366769b37",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.app_sg",
            "module.security.aws_security_group.vpc_endpoints_sg",
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.security.module.vpc.aws_customer_gateway.this",
            "module.security.module.vpc.aws_db_subnet_group.database",
            "module.security.module.vpc.aws_default_network_acl.this",
            "module.security.module.vpc.aws_default_route_table.default",
            "module.security.module.vpc.aws_default_security_group.this",
            "module.security.module.vpc.aws_default_vpc.this",
            "module.security.module.vpc.aws_egress_only_internet_gateway.this",
            "module.security.module.vpc.aws_eip.nat",
            "module.security.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.security.module.vpc.aws_flow_log.this",
            "module.security.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.aws_internet_gateway.this",
            "module.security.module.vpc.aws_nat_gateway.this",
            "module.security.module.vpc.aws_network_acl.database",
            "module.security.module.vpc.aws_network_acl.elasticache",
            "module.security.module.vpc.aws_network_acl.intra",
            "module.security.module.vpc.aws_network_acl.outpost",
            "module.security.module.vpc.aws_network_acl.private",
            "module.security.module.vpc.aws_network_acl.public",
            "module.security.module.vpc.aws_network_acl.redshift",
            "module.security.module.vpc.aws_network_acl_rule.database_inbound",
            "module.security.module.vpc.aws_network_acl_rule.database_outbound",
            "module.security.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.security.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.security.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.security.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.security.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.security.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.security.module.vpc.aws_network_acl_rule.private_inbound",
            "module.security.module.vpc.aws_network_acl_rule.private_outbound",
            "module.security.module.vpc.aws_network_acl_rule.public_inbound",
            "module.security.module.vpc.aws_network_acl_rule.public_outbound",
            "module.security.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.security.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.security.module.vpc.aws_redshift_subnet_group.redshift",
            "module.security.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.security.module.vpc.aws_route.database_internet_gateway",
            "module.security.module.vpc.aws_route.database_ipv6_egress",
            "module.security.module.vpc.aws_route.database_nat_gateway",
            "module.security.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.security.module.vpc.aws_route.private_ipv6_egress",
            "module.security.module.vpc.aws_route.private_nat_gateway",
            "module.security.module.vpc.aws_route.public_internet_gateway",
            "module.security.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.security.module.vpc.aws_route_table.database",
            "module.security.module.vpc.aws_route_table.elasticache",
            "module.security.module.vpc.aws_route_table.intra",
            "module.security.module.vpc.aws_route_table.private",
            "module.security.module.vpc.aws_route_table.public",
            "module.security.module.vpc.aws_route_table.redshift",
            "module.security.module.vpc.aws_route_table_association.database",
            "module.security.module.vpc.aws_route_table_association.elasticache",
            "module.security.module.vpc.aws_route_table_association.intra",
            "module.security.module.vpc.aws_route_table_association.outpost",
            "module.security.module.vpc.aws_route_table_association.private",
            "module.security.module.vpc.aws_route_table_association.public",
            "module.security.module.vpc.aws_route_table_association.redshift",
            "module.security.module.vpc.aws_route_table_association.redshift_public",
            "module.security.module.vpc.aws_subnet.database",
            "module.security.module.vpc.aws_subnet.elasticache",
            "module.security.module.vpc.aws_subnet.intra",
            "module.security.module.vpc.aws_subnet.outpost",
            "module.security.module.vpc.aws_subnet.private",
            "module.security.module.vpc.aws_subnet.public",
            "module.security.module.vpc.aws_subnet.redshift",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.security.module.vpc.aws_vpc_block_public_access_options.this",
            "module.security.module.vpc.aws_vpc_dhcp_options.this",
            "module.security.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security.module.vpc.aws_vpn_gateway.this",
            "module.security.module.vpc.aws_vpn_gateway_attachment.this",
            "module.security.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.security.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.security.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.security.module.vpc.data.aws_caller_identity.current",
            "module.security.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.security.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.data.aws_partition.current",
            "module.security.module.vpc.data.aws_region.current",
            "module.security.module.vpc_endpoints.aws_security_group.this",
            "module.security.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:vpc-endpoint/vpce-0c6fe3d02a0c39f64",
            "dns_entry": [
              {
                "dns_name": "vpce-0c6fe3d02a0c39f64-8r85z73n.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c6fe3d02a0c39f64-8r85z73n-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c6fe3d02a0c39f64-8r85z73n-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04901692I4SCIB4MF9KV"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04907731BGYQT5R662YZ"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z04892732MQDH6X252815"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z02344203LTY04MZKSQ6H"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c6fe3d02a0c39f64",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04b2a5e29b3de506b",
              "eni-0f6ab701b4c5ae1a4"
            ],
            "owner_id": "622623004059",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ff5830e5278e3268"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.223",
                "subnet_id": "subnet-03d99f96f68a329e8"
              },
              {
                "ipv4": "10.0.12.224",
                "subnet_id": "subnet-00aafa9bf7b3c9e65"
              }
            ],
            "subnet_ids": [
              "subnet-00aafa9bf7b3c9e65",
              "subnet-03d99f96f68a329e8"
            ],
            "tags": {
              "Name": "logs"
            },
            "tags_all": {
              "Name": "logs"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "vpce-0c6fe3d02a0c39f64",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.app_sg",
            "module.security.aws_security_group.vpc_endpoints_sg",
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.security.module.vpc.aws_customer_gateway.this",
            "module.security.module.vpc.aws_db_subnet_group.database",
            "module.security.module.vpc.aws_default_network_acl.this",
            "module.security.module.vpc.aws_default_route_table.default",
            "module.security.module.vpc.aws_default_security_group.this",
            "module.security.module.vpc.aws_default_vpc.this",
            "module.security.module.vpc.aws_egress_only_internet_gateway.this",
            "module.security.module.vpc.aws_eip.nat",
            "module.security.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.security.module.vpc.aws_flow_log.this",
            "module.security.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.aws_internet_gateway.this",
            "module.security.module.vpc.aws_nat_gateway.this",
            "module.security.module.vpc.aws_network_acl.database",
            "module.security.module.vpc.aws_network_acl.elasticache",
            "module.security.module.vpc.aws_network_acl.intra",
            "module.security.module.vpc.aws_network_acl.outpost",
            "module.security.module.vpc.aws_network_acl.private",
            "module.security.module.vpc.aws_network_acl.public",
            "module.security.module.vpc.aws_network_acl.redshift",
            "module.security.module.vpc.aws_network_acl_rule.database_inbound",
            "module.security.module.vpc.aws_network_acl_rule.database_outbound",
            "module.security.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.security.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.security.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.security.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.security.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.security.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.security.module.vpc.aws_network_acl_rule.private_inbound",
            "module.security.module.vpc.aws_network_acl_rule.private_outbound",
            "module.security.module.vpc.aws_network_acl_rule.public_inbound",
            "module.security.module.vpc.aws_network_acl_rule.public_outbound",
            "module.security.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.security.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.security.module.vpc.aws_redshift_subnet_group.redshift",
            "module.security.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.security.module.vpc.aws_route.database_internet_gateway",
            "module.security.module.vpc.aws_route.database_ipv6_egress",
            "module.security.module.vpc.aws_route.database_nat_gateway",
            "module.security.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.security.module.vpc.aws_route.private_ipv6_egress",
            "module.security.module.vpc.aws_route.private_nat_gateway",
            "module.security.module.vpc.aws_route.public_internet_gateway",
            "module.security.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.security.module.vpc.aws_route_table.database",
            "module.security.module.vpc.aws_route_table.elasticache",
            "module.security.module.vpc.aws_route_table.intra",
            "module.security.module.vpc.aws_route_table.private",
            "module.security.module.vpc.aws_route_table.public",
            "module.security.module.vpc.aws_route_table.redshift",
            "module.security.module.vpc.aws_route_table_association.database",
            "module.security.module.vpc.aws_route_table_association.elasticache",
            "module.security.module.vpc.aws_route_table_association.intra",
            "module.security.module.vpc.aws_route_table_association.outpost",
            "module.security.module.vpc.aws_route_table_association.private",
            "module.security.module.vpc.aws_route_table_association.public",
            "module.security.module.vpc.aws_route_table_association.redshift",
            "module.security.module.vpc.aws_route_table_association.redshift_public",
            "module.security.module.vpc.aws_subnet.database",
            "module.security.module.vpc.aws_subnet.elasticache",
            "module.security.module.vpc.aws_subnet.intra",
            "module.security.module.vpc.aws_subnet.outpost",
            "module.security.module.vpc.aws_subnet.private",
            "module.security.module.vpc.aws_subnet.public",
            "module.security.module.vpc.aws_subnet.redshift",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.security.module.vpc.aws_vpc_block_public_access_options.this",
            "module.security.module.vpc.aws_vpc_dhcp_options.this",
            "module.security.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security.module.vpc.aws_vpn_gateway.this",
            "module.security.module.vpc.aws_vpn_gateway_attachment.this",
            "module.security.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.security.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.security.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.security.module.vpc.data.aws_caller_identity.current",
            "module.security.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.security.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.data.aws_partition.current",
            "module.security.module.vpc.data.aws_region.current",
            "module.security.module.vpc_endpoints.aws_security_group.this",
            "module.security.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "secretsmanager",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622623004059:vpc-endpoint/vpce-072276f02b1a81347",
            "dns_entry": [
              {
                "dns_name": "vpce-072276f02b1a81347-6rap9ght.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-072276f02b1a81347-6rap9ght-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-072276f02b1a81347-6rap9ght-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04901471W37W60PNRPQU"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-072276f02b1a81347",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08163cc51b2b30522",
              "eni-0a38444dc67c255bd"
            ],
            "owner_id": "622623004059",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ff5830e5278e3268"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.42",
                "subnet_id": "subnet-03d99f96f68a329e8"
              },
              {
                "ipv4": "10.0.12.225",
                "subnet_id": "subnet-00aafa9bf7b3c9e65"
              }
            ],
            "subnet_ids": [
              "subnet-00aafa9bf7b3c9e65",
              "subnet-03d99f96f68a329e8"
            ],
            "tags": {
              "Name": "secretsmanager"
            },
            "tags_all": {
              "Name": "secretsmanager"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f6682535067d2e74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622623004059",
            "id": "vpce-072276f02b1a81347",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.app_sg",
            "module.security.aws_security_group.vpc_endpoints_sg",
            "module.security.data.aws_availability_zones.available",
            "module.security.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.security.module.vpc.aws_customer_gateway.this",
            "module.security.module.vpc.aws_db_subnet_group.database",
            "module.security.module.vpc.aws_default_network_acl.this",
            "module.security.module.vpc.aws_default_route_table.default",
            "module.security.module.vpc.aws_default_security_group.this",
            "module.security.module.vpc.aws_default_vpc.this",
            "module.security.module.vpc.aws_egress_only_internet_gateway.this",
            "module.security.module.vpc.aws_eip.nat",
            "module.security.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.security.module.vpc.aws_flow_log.this",
            "module.security.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.aws_internet_gateway.this",
            "module.security.module.vpc.aws_nat_gateway.this",
            "module.security.module.vpc.aws_network_acl.database",
            "module.security.module.vpc.aws_network_acl.elasticache",
            "module.security.module.vpc.aws_network_acl.intra",
            "module.security.module.vpc.aws_network_acl.outpost",
            "module.security.module.vpc.aws_network_acl.private",
            "module.security.module.vpc.aws_network_acl.public",
            "module.security.module.vpc.aws_network_acl.redshift",
            "module.security.module.vpc.aws_network_acl_rule.database_inbound",
            "module.security.module.vpc.aws_network_acl_rule.database_outbound",
            "module.security.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.security.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.security.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.security.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.security.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.security.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.security.module.vpc.aws_network_acl_rule.private_inbound",
            "module.security.module.vpc.aws_network_acl_rule.private_outbound",
            "module.security.module.vpc.aws_network_acl_rule.public_inbound",
            "module.security.module.vpc.aws_network_acl_rule.public_outbound",
            "module.security.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.security.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.security.module.vpc.aws_redshift_subnet_group.redshift",
            "module.security.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.security.module.vpc.aws_route.database_internet_gateway",
            "module.security.module.vpc.aws_route.database_ipv6_egress",
            "module.security.module.vpc.aws_route.database_nat_gateway",
            "module.security.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.security.module.vpc.aws_route.private_ipv6_egress",
            "module.security.module.vpc.aws_route.private_nat_gateway",
            "module.security.module.vpc.aws_route.public_internet_gateway",
            "module.security.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.security.module.vpc.aws_route_table.database",
            "module.security.module.vpc.aws_route_table.elasticache",
            "module.security.module.vpc.aws_route_table.intra",
            "module.security.module.vpc.aws_route_table.private",
            "module.security.module.vpc.aws_route_table.public",
            "module.security.module.vpc.aws_route_table.redshift",
            "module.security.module.vpc.aws_route_table_association.database",
            "module.security.module.vpc.aws_route_table_association.elasticache",
            "module.security.module.vpc.aws_route_table_association.intra",
            "module.security.module.vpc.aws_route_table_association.outpost",
            "module.security.module.vpc.aws_route_table_association.private",
            "module.security.module.vpc.aws_route_table_association.public",
            "module.security.module.vpc.aws_route_table_association.redshift",
            "module.security.module.vpc.aws_route_table_association.redshift_public",
            "module.security.module.vpc.aws_subnet.database",
            "module.security.module.vpc.aws_subnet.elasticache",
            "module.security.module.vpc.aws_subnet.intra",
            "module.security.module.vpc.aws_subnet.outpost",
            "module.security.module.vpc.aws_subnet.private",
            "module.security.module.vpc.aws_subnet.public",
            "module.security.module.vpc.aws_subnet.redshift",
            "module.security.module.vpc.aws_vpc.this",
            "module.security.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.security.module.vpc.aws_vpc_block_public_access_options.this",
            "module.security.module.vpc.aws_vpc_dhcp_options.this",
            "module.security.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.security.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security.module.vpc.aws_vpn_gateway.this",
            "module.security.module.vpc.aws_vpn_gateway_attachment.this",
            "module.security.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.security.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.security.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.security.module.vpc.data.aws_caller_identity.current",
            "module.security.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.security.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.module.vpc.data.aws_partition.current",
            "module.security.module.vpc.data.aws_region.current",
            "module.security.module.vpc_endpoints.aws_security_group.this",
            "module.security.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        }
      ]
    }
  ]
}